k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: go-redis-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: deetoxg/go-redis-k8s-app:latest
        imagePullPolicy:
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: go-redis-app
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
