k8s/go-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  type: LoadBalancer
  selector:
    app: go-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
